공공 api 파싱 버그 수정중